(dirs :standard \ catalogue carpenter)

(data_only_dirs acl2)

(env
 (release
  (flags
   (:standard -w +a-3-4-29-33-41-45-60-67-70)))
 (dev
  (flags
   (:standard -warn-error +A -w +a-3-4-29-33-41-45-60-67-70)))
 (static
  (flags
   (:standard -cclib -static -w +a-3-4-9-29-33-41-45-60-67-70))))

(alias
 (name default)
 (deps
  (alias install)
  (alias internal/all)))

(alias
 (name jerd)
 (deps
  (alias herd-www/all)))

(documentation)
