opam-version: "2.0"
name: "herdtools7"
version: "7.52+2(dev)"
synopsis: "The herdtools suite for simulating and studying weak memory models"
description: ""
maintainer: "Luc Maranget <Luc.Maranget@inria.fr>"
authors: [
  "Luc Maranget <Luc.Maranget@inria.fr>"
  "Jade Alglave <j.alglave@ucl.ac.uk>"
  "Vincent Jacques <vincent@russian-dolls-sunflowers.com>"
]
homepage: "http://diy.inria.fr/"
bug-reports: "http://github.com/herd/herdtools7/issues/"
doc: "http://diy.inria.fr/doc/index.html"
dev-repo: "git+https://github.com/herd/herdtools7.git"
build: ["./build.sh" "%{prefix}%"]
install: ["./install.sh" "%{prefix}%"]
# @todo Add "build-doc" field
# @todo Add "build-test" field
remove: ["./uninstall.sh" "%{prefix}%"]
depends: [
  "ocaml" {>= "4.02.0"}
  "ocamlbuild" {build}
]
