opam-version: "2.0"
name: "herdtools7"
version: "7.54+05(dev)"
synopsis: "The herdtools suite for simulating and studying weak memory models"
description: ""
maintainer: "Luc Maranget <Luc.Maranget@inria.fr>"
authors: [
  "Luc Maranget <Luc.Maranget@inria.fr>"
  "Jade Alglave <j.alglave@ucl.ac.uk>"
  "Vincent Jacques <vincent@russian-dolls-sunflowers.com>"
]
homepage: "http://diy.inria.fr/"
bug-reports: "http://github.com/herd/herdtools7/issues/"
doc: "http://diy.inria.fr/doc/index.html"
dev-repo: "git+https://github.com/herd/herdtools7.git"
build: ["sh" "./dune-build.sh" "%{prefix}%"]
install: ["sh" "./dune-install.sh" "%{prefix}%"]
# @todo Add "build-doc" field
# @todo Add "build-test" field
depends: [
  "ocaml" {>= "4.02.0"}
  "dune"
  "menhir" {>= "20180530"}
]
