opam-version: "2.0"
name: "herdtools7"
version: "7.56+04~dev"
synopsis: "The herdtools suite for simulating and studying weak memory models"
maintainer: "Luc Maranget <Luc.Maranget@inria.fr>"
authors: [
  "Luc Maranget <Luc.Maranget@inria.fr>"
  "Jade Alglave <j.alglave@ucl.ac.uk>"
]
homepage: "http://diy.inria.fr/"
bug-reports: "http://github.com/herd/herdtools7/issues/"
doc: "http://diy.inria.fr/doc/index.html"
dev-repo: "git+https://github.com/herd/herdtools7.git"
license: "CECILL-B"
build: [
  [make "build" "PREFIX=%{prefix}%"]
  [make "test" "PREFIX=%{prefix}%"] {with-test}
]
install: [make "install" "PREFIX=%{prefix}%"]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"  {>= "2.7" }
  "menhir" {>= "20200123"}
  "zarith"
]
depopts: [
  "js_of_ocaml-ppx"
]
conflicts: ["ocaml-option-bytecode-only"]
url {
  src: "https://github.com/herd/herdtools7/"
}
