(env
 (release
  (flags
   (:standard -w +a-3-4-9-29-33-41-45-60-67-70)))
 (dev
  (flags
   (:standard -warn-error +A -w +a-3-4-9-29-33-41-45-60-67-70))))

(rule
 (copy ../Version.ml Version.ml))

(ocamllex Lexer)

(ocamllex SimpleLexer0)

(ocamllex splitasl)

(menhir
 (modules Tokens)
 (flags --only-tokens))

(menhir
 (modules Tokens Parser)
 (merge_into Parser)
 (flags --cmly --external-tokens Tokens --exn-carries-state --strict))

(menhir
 (modules Parser0)
 (flags --unused-tokens --table --strict))

(rule
 (target parser_errors.ml)
 (deps
  (:tokens Tokens.mly)
  (:parser Parser.mly)
  (:msg parser_errors.messages))
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    --external-tokens
    Tokens
    %{tokens}
    %{parser}
    --base
    %{parser}
    --compile-errors
    %{msg}))))

(rule
 (deps
  (:v1 libdir/stdlib.asl)
  (:v0 libdir/stdlib0.asl))
 (target asl_stdlib.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let stdlib = {|")
    (cat %{v1})
    (echo "|}")
    (echo "let stdlib0 = {|")
    (cat %{v0})
    (echo "|}")))))

(library
 (name asllib)
 (modules
  (:standard \ aslref primitives_to_ml))
 (public_name herdtools7.asllib)
 (private_modules Parser0 Gparser0 Lexer0 SimpleLexer0 RepeatableLexer)
 (modules_without_implementation Backend AST ParserConfig)
 (flags
  (:standard -w -40-42-48))
 (libraries menhirLib zarith))

(documentation)

(executable
 (name aslref)
 (public_name aslref)
 (libraries asllib)
 (modules aslref))

(executable
 (name primitives_to_ml)
 (public_name primitives_to_ml)
 (libraries asllib str)
 (modules primitives_to_ml))
