(dirs :standard \ tests libdir)

(rule
 (copy ../Version.ml Version.ml))

(rule
 (target ASLSemPrimitives.ml)
 (deps ASLSemPrimitives.asl)
 (action
  (run %{bin:primitives_to_ml} %{deps} %{target})))

(rule
 (deps ASLSemPrimitives.asl)
 (target ASLSemPrimitivesSig.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let primitives_signatures = {|")
    (cat %{deps})
    (echo "|}")))))

(ocamllex lexConf_herd)

(executable
 (name herd)
 (public_name herd7)
 (libraries unix herdtools)
 (modules_without_implementation
  AArch64Sig
  action
  arch_herd
  monad
  sem
  XXXMem
  port))
