(dirs :standard \ tests/instructions libdir)

(data_only_dirs libdir)

(rule
 (copy ../Version.ml Version.ml))

(rule
 (target ASLSemPrimitives.ml)
 (deps ASLSemPrimitives.asl)
 (action
  (run %{bin:primitives_to_ml} %{deps} %{target})))

(rule
 (deps ASLSemPrimitives.asl)
 (target ASLSemPrimitivesSig.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let primitives_signatures = {|")
    (cat %{deps})
    (echo "|}")))))

(ocamllex lexConf_herd)

(library
 (name herd_core)
 (libraries unix herdtools)
 (wrapped true)
 (modules
  (:standard \ herd cli itimer))
 (modules_without_implementation
  AArch64Sig
  action
  arch_herd
  monad
  sem
  XXXMem
  port))

(executable
 (name herd)
 (public_name herd7)
 (package herdtools7)
 (modules herd cli itimer)
 (libraries unix herdtools herd_core))

(install
 (source_trees
  (libdir as herd))
 (section share)
 (package herdtools7))
