(ocamllex
 AArch64Lexer
 ARMLexer
 BPFLexer
 BellLexer
 CLexer
 lexHint
 lexOutMapping
 lexRename
 lexSplit
 lexUtils
 MIPSLexer
 modelLexer
 PPCLexer
 RISCVLexer
 scopeLexer
 splitter
 stateLexer
 X86Lexer
 X86_64Lexer
 echo
 dirtyBit
 cacheType
 lexScan
 JavaLexer)

(menhir
 (modules PPCParser)
 (flags --fixed-exception --strict))

(menhir
 (modules ARMParser)
 (flags --fixed-exception --strict))

(menhir
 (modules BPFParser)
 (flags --fixed-exception --strict))

(menhir
 (modules MIPSParser)
 (flags --fixed-exception --strict))

(menhir
 (modules X86Parser)
 (flags --fixed-exception --strict))

(menhir
 (modules X86_64Parser)
 (flags --fixed-exception --strict))

(menhir
 (modules modelParser)
 (flags --fixed-exception --strict))

(menhir
 (modules RISCVParser)
 (flags --fixed-exception --strict))

(menhir
 (modules JavaParser)
 (flags --fixed-exception --strict))

(menhir
 (modules stateParser)
 (flags --explain --fixed-exception --strict))

(menhir
 (modules procRules scopeRules BellExtraRules AArch64Parser)
 (merge_into AArch64Parser)
 (flags --fixed-exception --strict))

(menhir
 (modules procRules scopeRules BellExtraRules LISAParser)
 (merge_into LISAParser)
 (flags --fixed-exception --strict))

(menhir
 (modules scopeRules scopeParser)
 (merge_into scopeParser)
 (flags --fixed-exception --strict))

(menhir
 (modules scopeRules BellExtraRules CParser)
 (merge_into CParser)
 (flags --fixed-exception --strict))

(library
 (name herdtools)
 (wrapped false)
 (libraries str asllib zarith)
 (modules_without_implementation
  sign
  outTests
  AST
  CAst
  Scalar
  archBase
  archDump
  PPMode
  name
  value
  wideScalar
  hashInfo))
