(env
 (release
  (flags
   (:standard -w +a-3-4-9-29-33-41-45-60-67-70)))
 (dev
  (flags
   (:standard -warn-error +A -w +a-3-4-9-29-33-41-45-60-67-70))))

(executable
 (public_name aslspec)
 (name main)
 (modules
  (:standard \ Extract_tokens))
 (flags
  (:standard -w -40-42-44-48))
 (libraries str)
 (package aslspec)
 (optional))

(ocamllex SpecLexer)

(menhir
 (modules SpecParser)
 (flags --unused-tokens --explain --strict))

(executable
 (name extract_tokens)
 (libraries str)
 (modules extract_tokens))

(rule
 (target TokenStrings.ml)
 (deps SpecLexer.mll extract_tokens.exe)
 (package aslspec)
 (action
  (with-stdout-to
   %{target}
   (run %{dep:extract_tokens.exe} SpecLexer.mll))))

(rule
 (deps builtins.spec)
 (target builtins.ml)
 (package aslspec)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let builtin_spec_str = {|")
    (cat %{deps})
    (echo "|}")))))

(cram
 (package aslspec)
 (deps %{bin:aslspec}))
