(library
 (name carpenter_lib)
 (flags
  (:standard -w -40-42-44-48))
 (modules :standard \ main)
 (optional)
 (libraries herdtools7.asllib qcheck-core zarith re feat fix logs))

(executable
 (public_name carpenter)
 (name main)
 (flags
  (:standard -w -40-42-44-48))
 (modules main)
 (optional)
 (libraries cmdliner carpenter_lib logs.cli))
