(library
 (name menhir2bnfc_lib)
 (modules :standard \ menhir2bnfc)
 (flags -w -9)
 (optional)
 (package menhir2bnfc)
 (libraries herdtools7.asllib menhirSdk))

(executable
 (public_name menhir2bnfc)
 (name menhir2bnfc)
 (modules menhir2bnfc)
 (optional)
 (package menhir2bnfc)
 (libraries menhir2bnfc_lib))
