(tests
 (names toposort ConstraintBinops mask)
 (modes native)
 (enabled_if %{lib-available:qcheck})
 (libraries asllib qcheck)
 (modules toposort ConstraintBinops mask))

(library
 (name testhelpers)
 (libraries asllib zarith)
 (modules helpers))

(tests
 (names static bitvector types)
 (modes native)
 (deps
  (:standard ../libdir/stdlib.asl))
 (libraries asllib zarith testhelpers)
 (modules
  (:standard \ toposort helpers ConstraintBinops Lexer mask))
 (flags
  (:standard -w -40-42))
 (action
  (setenv
   ASL_LIBDIR
   %{project_root}/asllib/libdir/
   (run %{test} -e))))

(test
 (name Lexer)
 (modes native)
 (libraries asllib menhirSdk testhelpers)
 (modules Lexer)
 (action
  (setenv
   ASL_PARSER_CMLY
   %{project_root}/asllib/Parser.cmly
   (run %{test} -e))))

(cram
 (deps %{bin:aslref}))
