(executable
 (name check_no_missing_file_in_run)
 (modules check_no_missing_file_in_run)
 (libraries str))

(tests
 (names toposort ConstraintBinops)
 (modes native)
 (enabled_if %{lib-available:qcheck})
 (libraries asllib qcheck)
 (package aslref)
 (modules toposort ConstraintBinops))

(library
 (name testhelpers)
 (package aslref)
 (libraries asllib zarith)
 (modules helpers))

(tests
 (names static bitvector types)
 (modes native)
 (package aslref)
 (deps
  (:standard ../libdir/stdlib.asl))
 (libraries asllib zarith testhelpers)
 (modules
  (:standard
   \
   toposort
   helpers
   ConstraintBinops
   Lexer
   check_no_missing_file_in_run))
 (flags
  (:standard -w -40-42))
 (action
  (setenv
   ASL_LIBDIR
   %{project_root}/asllib/libdir/
   (run %{test} -e))))

(test
 (name Lexer)
 (modes native)
 (libraries asllib menhirSdk testhelpers)
 (modules Lexer)
 (package aslref)
 (action
  (setenv
   ASL_PARSER_CMLY
   %{project_root}/Parser.cmly
   (run %{test} -e))))

(cram
 (deps %{bin:aslref}))
