(executable
 (public_name parser_cmp)
 (name parser_cmp)
 (modules parser_cmp)
 (optional)
 (libraries bnfc_parser herdtools7.asllib))

(rule
 (target parser_cmp.out)
 (deps
  (source_tree %{workspace_root}/asllib/tests))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:parser_cmp} -q -o %{target} asllib/tests))))

(rule
 (alias bnfc_test)
 (enabled_if %{lib-available:bnfc_parser})
 (action
  (diff parser_cmp.expected parser_cmp.out)))
